--- a/src/NacosConfigSdk.csproj
+++ b/src/NacosConfigSdk.csproj
@@ -11,7 +11,7 @@
 
         <!-- Package metadata -->
         <PackageId>Nacos.Config.Lite</PackageId>
-        <Version>1.0.0-rc.1</Version>
+        <Version>1.0.0</Version>
         <Authors>ccccccmd</Authors>
         <Description>A production-ready, lightweight Nacos configuration SDK for .NET. HTTP-only design with zero gRPC dependencies, built on modern async/await patterns and IHttpClientFactory for optimal connection pooling. Features dual authentication (username/password and AK/SK), automatic failover, local snapshot caching, and real-time config change notifications. Perfect for microservices and cloud-native applications.</Description>
         <PackageTags>nacos;nacos-client;configuration;config-center;alibaba;microservices;cloud-native;distributed-config;service-mesh;dotnet;netcore;async;http-client;failover;snapshot;long-polling;spring-cloud-alibaba</PackageTags>
@@ -21,14 +21,14 @@
         <PackageProjectUrl>https://github.com/ccccccmd/nacos-config-sdk</PackageProjectUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>icon.png</PackageIcon>
-        <PackageReleaseNotes>v1.0.0-rc.1: Release candidate with complete core features - config CRUD, dual authentication, long-polling listener, local snapshots, and production-ready quality</PackageReleaseNotes>
-        
+        <PackageReleaseNotes>v1.0.0: First stable release - Production-validated with complete core features including config CRUD, dual authentication (username/password and AK/SK), long-polling listener, local snapshots, and high availability failover strategy</PackageReleaseNotes>
+
         <!-- Build settings -->
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
-    
+
     <!-- Include README in package -->
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
